[package]
name = "axum"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.7"
derive-new = "0.7.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"

# Extension
std-rs = { path = "../std-rs" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
validator = {version = "0.19", features = ["derive"]}

[dev-dependencies]
anyhow = "1.0.92"
bytes = "1.7.1"
futures-util = "0.3.30"
http-body = "1.0.1"
http-body-util = "0.1.2"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
